documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;

typedef struct
{
    ULONG  ctrlflags;           //User writes message configuration options
    USHORT flag1;               //Card writes message flag 1
    USHORT flag2;               //Card writes message flag 2
    USHORT errflags;            //Card writes error flags
    USHORT actflags;            //Card writes activity flags
    USHORT resptime1;           //Card writes response time 1
    USHORT resptime2;           //Card writes response time 2
    USHORT datacount;           //Card writes data count
    USHORT resv7;               //Reserved field
    ULONG  timetag;             //Card writes time tag
    ULONG  elapsetime;          //Card writes elapsed time
    USHORT resv12;              //Reserved field
    USHORT resv13;              //Reserved field
    USHORT resv14;              //Reserved field
    USHORT resv15;              //Reserved field
    USHORT resv16;              //Reserved field
    USHORT resv17;              //Reserved field
    USHORT resv18;              //Reserved field
    USHORT resv19;              //Reserved field
    USHORT cwd1;                //User writes command word 1
    USHORT cwd2;                //User writes command word 2
    USHORT swd1;                //Card writes status word 1
    USHORT swd2;                //Card writes status word 2
    USHORT data[32];            //User writes data words
    USHORT extra[8];            //User writes extra words
} XMITFIELDS;
typedef XMITFIELDS * LPXMITFIELDS;

/**
*
*  L13 Driver functions.
*
**/

L13W32API ERRVAL __stdcall L13_BCConfig(ULONG configval,HCARD handleval);

L13W32API LISTADDR __stdcall L13_BCCreateList(ULONG listconfigval,INT count,ULONG msgconfigval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCARD handleval);

L13W32API MSGADDR __stdcall L13_BCCreateMsg(ULONG configval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedFrame(ULONG timeval,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedMsg(MSGADDR msgaddr,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedRetry(USHORT condition,USHORT retries,HCARD handleval);

L13W32API ERRVAL __stdcall L13_BCTransmitMsg(LPXMITFIELDS xmitfields,HCARD handleval);

L13W32API ERRVAL __stdcall L13_BCTransmitMsgEx(LPXMITFIELDS xmitfields,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardClose(HCARD handleval);

L13W32API HCARD __stdcall L13_CardOpen(INT cardnum);

L13W32API VOID __stdcall L13_CardReset(HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardStart(HCARD handleval);

L13W32API BOOL __stdcall L13_CardStop(HCARD handleval);

L13W32API ERRVAL __stdcall L13_ErrorCtrl(ULONG ctrlval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_ErrorDefine(ULONG defineval,USHORT errvalue,INT countval,USHORT wordpos,USHORT bitpos,HCARD handleval);

L13W32API BOOL __stdcall L13_ErrorSent(HCARD handleval);

L13W32API ERRVAL __stdcall L13_ErrorTagBC(BOOL tagval,MSGADDR msgaddr,HCARD handleval);

L13W32API ERRVAL __stdcall L13_ErrorTagRT(BOOL tagval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_IntConfig(USHORT configval,USHORT count,HCARD handleval);

L13W32API INT __stdcall L13_ListDataRd(LPUSHORT buf,INT count,LISTADDR listaddr,HCARD handleval);

L13W32API INT __stdcall L13_ListDataWr(LPUSHORT buf,INT count,LISTADDR listaddr,HCARD handleval);

L13W32API ERRVAL __stdcall L13_MonConfig(ULONG configval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_MonFilterSA(INT taval,ULONG rcvsamask,ULONG xmtsamask,ULONG rcvmcmask,ULONG xmtmcmask,HCARD handleval);

L13W32API ERRVAL __stdcall L13_MonFilterTA(ULONG tamask,HCARD handleval);

L13W32API BOOL __stdcall L13_MonIsRunning(HCARD handleval);

L13W32API USHORT __stdcall L13_MonRd(LPUSHORT buf,HCARD handleval);

L13W32API VOID __stdcall L13_MsgDataRd(LPUSHORT buf,INT count,MSGADDR msgaddr,HCARD handleval);

L13W32API VOID __stdcall L13_MsgDataWr(LPUSHORT buf,INT count,MSGADDR msgaddr,HCARD handleval);

L13W32API ULONG __stdcall L13_MsgFieldRd(USHORT fieldtype,MSGADDR msgaddr,HCARD handleval);

L13W32API ULONG __stdcall L13_MsgFieldWr(ULONG fieldval,USHORT fieldtype,MSGADDR msgaddr,HCARD handleval);

L13W32API ERRVAL __stdcall L13_PlayConfig(ULONG configval,HCARD handleval);

L13W32API USHORT __stdcall L13_PlayWr(LPUSHORT buf,HCARD handleval);

L13W32API ERRVAL __stdcall L13_RTConfig(ULONG configval,INT taval,HCARD handleval);

L13W32API LISTADDR __stdcall L13_RTCreateList(ULONG listconfigval,INT count,ULONG msgconfigval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L13W32API MSGADDR __stdcall L13_RTCreateMsg(ULONG configval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L13W32API MSGADDR __stdcall L13_RTGetMsg(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_RTSWDWr(USHORT swdval,INT taval,HCARD handleval);

L13W32API USHORT __stdcall L13_ValPackCWD(INT TAval,INT TRflag,INT SAval,INT WCval);

L13W32API VOID __stdcall L13_ValUnpackCWD(USHORT CWDval,LPINT TAval,LPINT TRflag,LPINT SAval,LPINT WCval);


/**
*
*  Internal functions used by the L13 Driver.
*
**/

L13W32API ULONG __stdcall L13_AddrDSP(ULONG addr);

L13W32API ULONG __stdcall L13_AddrHost(ULONG addr);

L13W32API ERRVAL __stdcall L13_BCConfigEx(ULONG configval,USHORT count,HCARD handleval);

L13W32API MSGADDR __stdcall L13_BCConfigMsg(ULONG configval,MSGADDR msgaddr,HCARD handleval);

L13W32API LISTADDR __stdcall L13_BCCreateListEx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCARD handleval);

L13W32API LISTADDR __stdcall L13_BCCreateListExx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCARD handleval);

L13W32API MSGADDR __stdcall L13_BCGetMsg(INT index,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedAgain(SCHNDX index,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedBranch(USHORT condition,SCHNDX destindex,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedBranchDin0(SCHNDX destindex,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedBranchDin1(SCHNDX destindex,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedBranchEx(USHORT condition1,USHORT condition2,USHORT condition3,SCHNDX destindex,HCARD handleval);

L13W32API ERRVAL __stdcall L13_BCSchedBuild(USHORT nummsgs,LPMSGADDR msgaddr,LPUSHORT freq,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedCall(SCHNDX destindex,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedCallCond(USHORT condition,SCHNDX destindex,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedCallCondEx(USHORT condition1,USHORT condition2,USHORT condition3,SCHNDX destindex,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedEntry(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedFrameEnd(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedFrameStart(ULONG timeval,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedGap(USHORT gapval,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedGoto(SCHNDX destindex,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedHalt(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedInt(USHORT tagval,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedIntCond(USHORT condition,USHORT tagval,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedIntCondEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT tagval,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedNop(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedPause(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedPulse(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedPulse0(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedPulse1(HCARD handleval);