documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32NET.VB


    Public Declare Function L13_BCConfig Lib "L13W32.DLL" Alias "_L13_BCConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCCreateList Lib "L13W32.DLL" Alias "_L13_BCCreateList@28" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal cwd1 As UInt16, ByVal cwd2 As UInt16, ByRef data As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_BCCreateMsg Lib "L13W32.DLL" Alias "_L13_BCCreateMsg@20" (ByVal configval As UInt32, ByVal cwd1 As UInt16, ByVal cwd2 As UInt16, ByRef data As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_BCSchedFrame Lib "L13W32.DLL" Alias "_L13_BCSchedFrame@8" (ByVal timeval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedMsg Lib "L13W32.DLL" Alias "_L13_BCSchedMsg@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedRetry Lib "L13W32.DLL" Alias "_L13_BCSchedRetry@12" (ByVal condition As UInt16, ByVal retries As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCTransmitMsg Lib "L13W32.DLL" Alias "_L13_BCTransmitMsg@8" (ByRef xmitfieldsval As XMITFIELDS, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCTransmitMsgEx Lib "L13W32.DLL" Alias "_L13_BCTransmitMsgEx@8" (ByRef xmitfieldsval As XMITFIELDS, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CardClose Lib "L13W32.DLL" Alias "_L13_CardClose@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CardOpen Lib "L13W32.DLL" Alias "_L13_CardOpen@4" (ByVal cardnum As Int32) As UInt32
    Public Declare Sub L13_CardReset Lib "L13W32.DLL" Alias "_L13_CardReset@4" (ByVal handleval As UInt32)
    Public Declare Function L13_CardStart Lib "L13W32.DLL" Alias "_L13_CardStart@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CardStop Lib "L13W32.DLL" Alias "_L13_CardStop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ErrorCtrl Lib "L13W32.DLL" Alias "_L13_ErrorCtrl@8" (ByVal ctrlval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ErrorDefine Lib "L13W32.DLL" Alias "_L13_ErrorDefine@24" (ByVal defineval As UInt32, ByVal errvalue As UInt16, ByVal countval As Int32, ByVal wordpos As UInt16, ByVal bitpos As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ErrorSent Lib "L13W32.DLL" Alias "_L13_ErrorSent@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ErrorTagBC Lib "L13W32.DLL" Alias "_L13_ErrorTagBC@12" (ByVal tagval As Int32, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ErrorTagRT Lib "L13W32.DLL" Alias "_L13_ErrorTagRT@24" (ByVal tagval As Int32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_IntConfig Lib "L13W32.DLL" Alias "_L13_IntConfig@12" (ByVal configval As UInt16, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ListDataRd Lib "L13W32.DLL" Alias "_L13_ListDataRd@16" (ByRef buf As UInt16, ByVal count As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ListDataWr Lib "L13W32.DLL" Alias "_L13_ListDataWr@16" (ByRef buf As UInt16, ByVal count As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_MonConfig Lib "L13W32.DLL" Alias "_L13_MonConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_MonFilterSA Lib "L13W32.DLL" Alias "_L13_MonFilterSA@24" (ByVal taval As Int32, ByVal rcvsamask As UInt32, ByVal xmtsamask As UInt32, ByVal rcvmcmask As UInt32, ByVal xmtmcmask As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_MonFilterTA Lib "L13W32.DLL" Alias "_L13_MonFilterTA@8" (ByVal tamask As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_MonIsRunning Lib "L13W32.DLL" Alias "_L13_MonIsRunning@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_MonRd Lib "L13W32.DLL" Alias "_L13_MonRd@8" (ByRef buf As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_MsgDataRd Lib "L13W32.DLL" Alias "_L13_MsgDataRd@16" (ByRef buf As UInt16, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L13_MsgDataWr Lib "L13W32.DLL" Alias "_L13_MsgDataWr@16" (ByRef buf As UInt16, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function L13_MsgFieldRd Lib "L13W32.DLL" Alias "_L13_MsgFieldRd@12" (ByVal fieldtype As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_MsgFieldWr Lib "L13W32.DLL" Alias "_L13_MsgFieldWr@16" (ByVal fieldval As UInt32, ByVal fieldtype As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_PlayConfig Lib "L13W32.DLL" Alias "_L13_PlayConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_PlayWr Lib "L13W32.DLL" Alias "_L13_PlayWr@8" (ByRef buf As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function L13_RTConfig Lib "L13W32.DLL" Alias "_L13_RTConfig@12" (ByVal configval As UInt32, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_RTCreateList Lib "L13W32.DLL" Alias "_L13_RTCreateList@32" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_RTCreateMsg Lib "L13W32.DLL" Alias "_L13_RTCreateMsg@24" (ByVal configval As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_RTGetMsg Lib "L13W32.DLL" Alias "_L13_RTGetMsg@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_RTSWDWr Lib "L13W32.DLL" Alias "_L13_RTSWDWr@12" (ByVal swdval As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ValPackCWD Lib "L13W32.DLL" Alias "_L13_ValPackCWD@16" (ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal wcval As Int32) As UInt16
    Public Declare Sub L13_ValUnpackCWD Lib "L13W32.DLL" Alias "_L13_ValUnpackCWD@20" (ByVal cwdval As UInt16, ByRef taval As Int32, ByRef trflag As Int32, ByRef saval As Int32, ByRef wcval As Int32)
    Public Declare Function L13_AddrDSP Lib "L13W32.DLL" Alias "_L13_AddrDSP@4" (ByVal addr As UInt32) As UInt32
    Public Declare Function L13_AddrHost Lib "L13W32.DLL" Alias "_L13_AddrHost@4" (ByVal addr As UInt32) As UInt32
    Public Declare Function L13_BCConfigEx Lib "L13W32.DLL" Alias "_L13_BCConfigEx@12" (ByVal configval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCConfigMsg Lib "L13W32.DLL" Alias "_L13_BCConfigMsg@12" (ByVal configval As UInt32, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_BCCreateListEx Lib "L13W32.DLL" Alias "_L13_BCCreateListEx@32" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal cwd1 As UInt16, ByVal cwd2 As UInt16, ByRef data As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_BCCreateListExx Lib "L13W32.DLL" Alias "_L13_BCCreateListExx@32" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal cwd1 As UInt16, ByVal cwd2 As UInt16, ByRef data As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_BCGetMsg Lib "L13W32.DLL" Alias "_L13_BCGetMsg@8" (ByVal index As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_BCSchedAgain Lib "L13W32.DLL" Alias "_L13_BCSchedAgain@8" (ByVal index As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedBranch Lib "L13W32.DLL" Alias "_L13_BCSchedBranch@12" (ByVal condition As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedBranchDin0 Lib "L13W32.DLL" Alias "_L13_BCSchedBranchDin0@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedBranchDin1 Lib "L13W32.DLL" Alias "_L13_BCSchedBranchDin1@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedBranchEx Lib "L13W32.DLL" Alias "_L13_BCSchedBranchEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedBuild Lib "L13W32.DLL" Alias "_L13_BCSchedBuild@16" (ByVal nummsgs As UInt16, ByRef msgaddr As UInt32, ByRef freq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedCall Lib "L13W32.DLL" Alias "_L13_BCSchedCall@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedCallCond Lib "L13W32.DLL" Alias "_L13_BCSchedCallCond@12" (ByVal condition As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedCallCondEx Lib "L13W32.DLL" Alias "_L13_BCSchedCallCondEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedEntry Lib "L13W32.DLL" Alias "_L13_BCSchedEntry@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedFrameEnd Lib "L13W32.DLL" Alias "_L13_BCSchedFrameEnd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedFrameStart Lib "L13W32.DLL" Alias "_L13_BCSchedFrameStart@8" (ByVal timeval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedGap Lib "L13W32.DLL" Alias "_L13_BCSchedGap@8" (ByVal gapval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedGoto Lib "L13W32.DLL" Alias "_L13_BCSchedGoto@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedHalt Lib "L13W32.DLL" Alias "_L13_BCSchedHalt@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedInt Lib "L13W32.DLL" Alias "_L13_BCSchedInt@8" (ByVal tagval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedIntCond Lib "L13W32.DLL" Alias "_L13_BCSchedIntCond@12" (ByVal condition As UInt16, ByVal tagval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedIntCondEx Lib "L13W32.DLL" Alias "_L13_BCSchedIntCondEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal tagval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedNop Lib "L13W32.DLL" Alias "_L13_BCSchedNop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedPause Lib "L13W32.DLL" Alias "_L13_BCSchedPause@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedPulse Lib "L13W32.DLL" Alias "_L13_BCSchedPulse@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedPulse0 Lib "L13W32.DLL" Alias "_L13_BCSchedPulse0@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedPulse1 Lib "L13W32.DLL" Alias "_L13_BCSchedPulse1@4" (ByVal handleval As UInt32) As Int32
